add solution